@@ -15,7 +15,6 @@ import java.awt.BorderLayout;
 import java.awt.Dimension;
 import java.awt.event.WindowAdapter;
 import java.awt.event.WindowEvent;
-import java.util.Collections;
 import java.util.List;
 import javax.swing.Action;
 import javax.swing.JFrame;
@@ -103,11 +102,11 @@ public class LobbyFrame extends JFrame {
 
   private List<Action> newModeratorActions(final ChatParticipant clickedOn) {
     if (!lobbyClient.isModerator()) {
-      return Collections.emptyList();
+      return List.of();
     }
 
     if (clickedOn.getPlayerName().equals(lobbyClient.getPlayerName())) {
-      return Collections.emptyList();
+      return List.of();
     }
 
     final var moderatorLobbyClient = lobbyClient.getHttpLobbyClient().getModeratorLobbyClient();
